[package]
name = "nasa_api"
description = "Wrapper for the NASA API"
repository = "https://github.com/schoeneBiene/nasa_api_rs"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["nasa", "api"]

[dependencies]
reqwest = { version = "0.13.4", features = ["query", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[features]
apod = []

[dev-dependencies]
# used in the examples
tokio = { version = "1.52.3", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
